# tutu-personal-assistent

./: .gitignore  AI_MEMORY.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/tutu_app/: MainActivity.kt
assets/: qa_bank.json
assets/models/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: agent_model.dart  api_config_model.dart  face_model.dart  memory_model.dart  message_model.dart  qa_bank_model.dart
lib/screens/: agent_list_screen.dart  api_setup_screen.dart  camera_screen.dart  chat_screen.dart  create_agent_screen.dart  home_screen.dart  model_manager_screen.dart  onboarding_screen.dart  openrouter_dashboard_screen.dart  settings_screen.dart  splash_screen.dart  voice_settings_screen.dart
lib/services/: api_service.dart  azure_tts_service.dart  face_recognition_service.dart  llama_bindings.dart  local_llm_service.dart  offline_qa_service.dart  openrouter_service.dart  rag_service.dart  storage_service.dart  threading_service.dart  voice_conversation_service.dart  voice_service.dart
lib/utils/: constants.dart  emoji_data.dart  helpers.dart  themes.dart
lib/widgets/: agent_card.dart  custom_app_bar.dart  emoji_picker_grid.dart  gemini_chat_bubble.dart  message_bubble.dart  voice_input_button.dart  voice_visualizer.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/android/: CMakeLists.txt
native/cpp/: llama_bridge.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
